ex-1 should be fail

--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -1,53 +1,1 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-.banner {
-    width: 100vw;
-    height: 120px;
-    background-color: #92AABD;
-    align-items: center;
-    display: flex;
-}
-
-.banner h1 {
-    font-size: 32px;
-    color: #183B56;
-    font-family: 'Sarabun';
-    font-weight: 700;
-    line-height: 16px;
-    margin: 0px 55px;
-
-}
-
-.container {
-    margin: 55px;
-    width: 536px;
-    height: 321px;
-    border: 3px solid #183B56;
-    padding: 25px;
-    background-color: #E4E9ED;
-}
-
-.container h3 {
-    color: #183B56;
-    font-family: 'Sarabun';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 26px;
-}
-
-.container img {
-    width: 405px;
-    height: 120px;
-    margin: 10px 0px;
-}
-
-.container p {
-    color: #183B56;
-    font-size: 16px;
-    line-height: 20px;
-}
+/* Start coding here */
