optimize test case

--- a/ex-2/style.css
+++ b/ex-2/style.css
@@ -1,22 +1,1 @@
-* {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-}
-
-.box-out {
-    /* border: 16px solid lightgray; */
-    background-color: black;
-    padding: 16px;
-    height: 100vh;
-}
-
-.box-in {
-    text-align: center;
-    font-weight: bold;
-    font-size: 72px;
-    background-color: khaki;
-    border: solid 24px crimson;
-    padding-top: 30px;
-    height: 100%;
-}
+/* Start coding here */
