--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -1,1 +1,55 @@
 /* Start coding here */
+
+* {
+  box-sizing: border-box;
+}
+
+.box-title {
+  height: 120px;
+  width: 100vw;
+  background-color: #92aabd;
+}
+
+.title {
+  display: inline-block;
+  color: #183b56;
+  width: 164px;
+  height: 16px;
+  margin-top: 52px;
+  margin-left: 55px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Sarabun;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 16px;
+  text-align: left;
+}
+
+.box-article {
+  width: 536px;
+  height: 321px;
+  margin: 55px 50px;
+  border: 3px solid #183b56;
+  background-color: #e4e9ed;
+  padding: 30px 24px;
+}
+
+.artile-title {
+  display: inline-block;
+  width: 303px;
+  height: 26px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Sarabun;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: left;
+}
+
+.article-content {
+  width: 488px;
+  height: 130px;
+  padding: 0px 0px 6px 0px;
+}
